src/test/ui/struct-fields-decl-dupe.stderr
error[E0124]: field `foo` is already declared
  --> $DIR/struct-fields-decl-dupe.rs:13:5
   |
LL |     foo: isize,
   |     ---------- `foo` first declared here
LL |     foo: isize,
   |     ^^^^^^^^^^ field already declared

error: aborting due to previous error

